--- a/docs/Internet/善用云服务提供商拓展视野 8182bdfc7c3c4f6a8e5d0b11a33101cf.md
+++ b/docs/Internet/善用云服务提供商拓展视野 8182bdfc7c3c4f6a8e5d0b11a33101cf.md
@@ -2,7 +2,7 @@
 
 在云服务商的产品列表中，我们可以看到许多前沿的互联网技术，加上比较大的服务商都提供了详细的文档，可以作为了解最新动向的窗口。
 
-![Untitled](%E5%96%84%E7%94%A8%E4%BA%91%E6%9C%8D%E5%8A%A1%E6%8F%90%E4%BE%9B%E5%95%86%E6%8B%93%E5%B1%95%E8%A7%86%E9%87%8E%208182bdfc7c3c4f6a8e5d0b11a33101cf/Untitled.png)
+![Untitled](/images/tencent-cloud.png)
 
 ## CDN
 
